# qrmaster

./: CHANGELOG.md  CONFIG.md  EXAMPLES.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  RUN.md  TODO.md  USAGE.md  commands.py  context.py  core.py  handlers.py  options.json  pyproject.toml  qrmaster.py  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
core/: cli.py  commands.py  config.py  project.py  qr.py  qrmasterpdf.py  report.py  schema.py  state.py
docs/locale/es/: CONFIG.txt  EXAMPLES.txt  INSTALL.txt  RUN.txt  qrmaster.core.txt
docs/locale/es/LC_MESSAGES/: CONFIG.po  index.po  modules.po  qrmaster.exporters.po  qrmaster.graphics.po  qrmaster.po  qrmaster.utils.po
docs/locale/pot/.doctrees/: CONFIG.doctree  EXAMPLES.doctree  INSTALL.doctree  RUN.doctree  environment.pickle  index.doctree  modules.doctree  qrmaster.core.doctree  qrmaster.doctree  qrmaster.exporters.doctree  qrmaster.graphics.doctree  qrmaster.utils.doctree
docs/source/: CONFIG.rst  EXAMPLES.rst  INSTALL.rst  RUN.rst  conf.py  index.rst  modules.rst  qrmaster.core.rst  qrmaster.exporters.rst  qrmaster.graphics.rst  qrmaster.rst  qrmaster.utils.rst
exporters/: pdf.py  svg.py
graphics/: frame.py  logo.py
qrmaster/: __main__.py
qrmaster/core/: cli.py  commands.py  config.py  logger.py  project.py  qr.py  qrmasterpdf.py  report.py  state.py
qrmaster/exporters/: pdf.py  svg.py
qrmaster/graphics/: frame.py  logo.py
qrmaster/utils/: utils.py
utils/: svg_utils.py  utils.py
